Fix sidebar scrollbar overlapping

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -55,7 +55,7 @@
 
     .sidebar-hidden {
       // width: 75px;
-      width: 75px;
+      width: 80px;
       padding: 5px;
       // @include sidebar-hidden;
 
